# flask_practice

./: .dockerignore  .gitignore  Dockerfile  article_data.json  config.py  db_init.sh  docker-compose.yaml  follower_data.json  pyproject.toml  requirements.txt  wsgi.py
app/: api.py  app.py  commands.py  config.py  extensions.py  models.py
app/admin/: __init__.py  views.py
app/api/: article.py  author.py  tag.py  user.py  views.py
app/api/permissions/: user.py
app/articles/: views.py
app/auth/: auth.py  views.py
app/author/: views.py
app/authors/: views.py
app/followers/: views.py
app/forms/: __init__.py  article.py  auth.py  user.py
app/models/: __init__.py  article.py  author.py  tag.py  user.py
app/object/: views.py
app/objects/: views.py
app/pages/: views.py
app/schemas/: __init__.py
app/templates/: base.html  navbar.html
app/templates/articles/: details.html  list.html
app/templates/auth/: login.html
app/templates/authors/: details.html  list.html  profile.html  register.html
app/templates/followers/: details.html  list.html
app/templates/macro/: formhelpers.html
app/templates/objects/: list.html
app/templates/users/: list.html  profile.html  (+1 more)
app/user/: views.py
app/users/: views.py
app/views/: __init__.py  admin.py
migrations/versions/: 1da5526ffb62_create_author_model_and_relationship_.py  4eeff09d7ecb_.py  4f2ebcd09bbc_.py  c257534d462c_.py  e06a8006bdd3_create_article_model_and_relationship_.py  ed90544cf4ee_.py
templates/: base.html
templates/objects/: details.html  list.html
templates/pages/: list.html
